--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>To-Do List</title>
-  <link rel="stylesheet" type="text/css" href="C:\FLASK TO DO\Static\styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div id="todo-container">
